main.css
:root{
  --primary:rgb(61, 207, 211);
  --dark:#161616;
  --pure:#fff;
  --ternary:#898989;
  --light: #2f2f2f;
  --secondary:070606
}
.hover{
transition: all .3s ease;
}
.hover a:hover{
 color: var(--primary);

}
.button{

  padding: .8rem 3rem;
  font-size: 1rem;
  font-weight: 600;
  cursor:pointer;
  text-transform: uppercase;
  transition: all .3s ease;
  -webkit-transition: all .3s ease;
  -moz-transition: all .3s ease;
  -ms-transition:all .3s ease;
  -o-transition: all .3s ease;
}
.primary-btn{
  
  border: 2px solid;
  border-color: var(--primary);
  color: var(--primary);
  background-color: transparent;
}

.primary-btn:focus{
  background-color: var(--dark);  
  color: var(--primary);
}
.primary-btn:hover{
  background-color: var(--primary);  
  color: var(--dark);
}
.primary-text{
  color: var(--primary);  
 
}
.secondary-text{
  font-weight: bolder;
  font-size: 1.5rem;
}
.padding{
  padding-bottom: 9vw;
}
.heading{
  font-size: 3rem;
  font-weight: bolder;
}
.section-heading{
  color:var(--secondary);
  text-align: center ;
  line-height: .5;
  margin-bottom: 1rem;
  font-family: 'Lato',sans-serif;
}
.card-img-style{
width: 103px;
height: 103px;
left: 33%;
top:55px;

  color: black;
position: relative;
background-color:var(--primary);
}
.card-style{
color: var(--dark);
position: fixed;

}
.card{
  text-align: center;
  transition: all .3s ease;
}
.icon-style{
  color: rgb(38,38,38);
  font-weight: bolder;
  text-align: center;
}
.projects:hover{
background-color:rgb(38,38,38);
color: white;
}
.projects:hover .project-title{
  background-color:rgb(38,38,38);
  color: red;
  }

  .edu-title-style{
    color: orangered;
  }
  .edu{
    background-color:var(--dark);
 color: var(--pure);
 font-family: 'Poppins', sans-serif;
  }

.contact{
  background-color: black;
  clip-path:polygon(0% 0%,90% 10%, 100% 0%,100% 100%,53% 100%, 50% 99%,47% 100%, 0% 100%) ;
}

  .btn-style{
    color: orangered;
    font-weight: bolder;
 
  }
  .btn-style:hover{
    color: rgb(170, 141, 103);
    font-weight: bolder;
  }
.padding-bottom{
  padding-bottom: 3%;
}
.projects:hover .icon-style{

  color:var(--primary);
  }
div.services-section .card h4{
  font-size: 1.6rem;
  font-weight: bold;
}

div.services-section .z-depth-3 p{
font-family: 'Poppins',sans-serif;
color:rgb(26, 22, 22);
padding-top: 0;
font-weight: 1000;
}
div.services-section .z-depth-3:hover p{
  color:white;
  }
div.services-section .z-depth-3:hover{
  background: var(--dark);
}

div.services-section .z-depth-3:hover h4{
  color:var(--pure);
 
}
.section{
padding-top: 30px;
padding-bottom: 30px;
}
@media screen and (max-width: 670px) {
  header {
    min-height: 500px;
  }
}
.work{
  text-align: center;
  background: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(img/ba2.gif);
  background-size: cover;
  color: var(--pure);
  clip-path: polygon(0 0, 80% 10%, 100% 0, 100% 100%, 10% 90%, 0 100%);
}

.bottom{
  padding-bottom: 10%;
}
.poppins{
  font-family: 'Poppins',sans-serif;
  padding-top: 10%;
}
body {
    background: #fff;
    font-family: 'Poppins',Helvetica Neue, Helvetica, Arial, sans-serif;
    font-size: 14px;
    color:#000;
    margin: 0;
    padding: 0;
  
  }

  .head{
    background: #000;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 90%, 0 100%);
  }
  

.swiper-pagination .parallax-ctrl{
  position: relative;
  
}

.swiper-slide {
  font-size: 18px;
  color:#000;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding: 40px 60px;
}
.parallax-bg {
  position: absolute;
  left: 0;
  top: 0;
  width: 130%;
  height: 100%;
  -webkit-background-size: cover;
  background-size: cover;
  background-position: center;
}
.swiper-slide .title {
  font-size: 41px;
  font-weight: 300;
}
.swiper-slide .subtitle {
  font-size: 1rem;
}
.swiper-slide .text {
  font-size: 21px;
  max-width: 400px;
  line-height: 1.3;
}

.image{
  height: 50%;
}

.parallax-slide{
font-size: 1rem;
}

